--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
 				"laravel/lumen-framework": "5.0.*",
 				"vlucas/phpdotenv": "~1.0",
-				"aziz/smartmodel": "2.*"
+				"laravelcollective/html": "5.0.*",
+				"aziz/smartmodel": "2.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
