--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "require": {
 				"laravel/lumen-framework": "5.0.*",
 				"vlucas/phpdotenv": "~1.0",
-				"laravelcollective/html": "5.0.*",
-				"aziz/smartmodel": "2.5.*"
+				"esensi/model": "0.5.*",
+				"components/jquery": "2.1.*",
+				"twitter/bootstrap": "3.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
