--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 				"laravel/lumen-framework": "5.0.*",
 				"vlucas/phpdotenv": "~1.0",
 				"esensi/model": "0.5.*",
+				"nesbot/carbon": "1.19.*",
 				"components/jquery": "2.1.*",
 				"happyworm/jplayer": "2.9.*",
 				"twitter/bootstrap": "3.3.*"
